...
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_baseline_clear_32"
            app:endIconMode="custom"
            app:helperText="@string/search_in_list_helper_text"
            app:layout_constraintBottom_toTopOf="@+id/rv_states"
            app:layout_constraintStart_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
